Fixed all title alignment issues

--- a/portfolio/portfolio.scss
+++ b/portfolio/portfolio.scss
@@ -1239,3 +1239,7 @@ footer {
   border: none;
   border-left: 1px solid white;
 }
+
+.subtitle .line-follow {
+  right: -0.75vw;
+}
